force-app/main/default/objects/RFQ_Line__c/RFQ_Line__c.object-meta.xml
<CustomObject>
    <label>RFQ Line</label>
    <nameField>
        <displayFormat>RFQL-{000000}</displayFormat>
        <label>RFQ Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQ Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>