force-app/main/default/objects/RFQ_Line__c/fields/Alternate_Brand_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Brand_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Alternate Brand Allowed</label>
    <type>Checkbox</type>
</CustomField>