force-app/main/default/objects/RFQ_Line__c/fields/Awarded_Price__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Price__c</fullName>
    <label>Awarded Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>