force-app/main/default/objects/RFQ_Line__c/fields/Awarded_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Awarded Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFQ Lines</relationshipLabel>
    <relationshipName>RFQ_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>