force-app/main/default/objects/RFQ_Line__c/fields/Brand_Preference__c.field-meta.xml
<CustomField>
    <fullName>Brand_Preference__c</fullName>
    <label>Brand Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>