force-app/main/default/objects/RFQ_Line__c/fields/Evaluation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Remarks__c</fullName>
    <label>Evaluation Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>