force-app/main/default/objects/RFQ_Line__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>