force-app/main/default/objects/RFQ_Line__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <label>Material Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>