force-app/main/default/objects/RFQ_Line__c/fields/Purchase_Requisition_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Requisition_Line__c</fullName>
    <label>Purchase Requisition Line</label>
    <referenceTo>Purchase_Requisition_Line__c</referenceTo>
    <relationshipLabel>RFQ Lines</relationshipLabel>
    <relationshipName>RFQ_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>