force-app/main/default/objects/RFQ_Line__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <label>RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipLabel>RFQ Lines</relationshipLabel>
    <relationshipName>RFQ_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>