force-app/main/default/objects/RFQ_Line__c/fields/Technical_Specification__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specification__c</fullName>
    <label>Technical Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>